gin version upgrade JWT token in header format changes + other fixes
