# schemas/register_schema.go
@@ -1,12 +1,12 @@
 package schemas
 
 type RegisterSchema struct {
-	Username     string `json:"username" validate:"required,usernamevalid"`
-	Email        string `json:"email" validate:"required,email"`
-	Password     string `json:"password" validate:"required,min=8,max=32"`
-	FirstName    string `json:"first_name" validate:"required,min=2,max=50,alpha"`
-	LastName     string `json:"last_name" validate:"required,min=2,max=50,alpha"`
-	DateOfBirth  string `json:"date_of_birth" validate:"required,datetime=2006-01-02"`
-	Gender       string `json:"gender" validate:"required,oneof=male female other"`
-	MobileNumber string `json:"mobile_number" validate:"required,len=10,numeric"`
+	Username     string `json:"username" binding:"required,alphanum"`
+	Email        string `json:"email" binding:"required,email"`
+	Password     string `json:"password" binding:"required,min=8,max=32"`
+	FirstName    string `json:"first_name" binding:"required,min=2,max=50,alpha"`
+	LastName     string `json:"last_name" binding:"required,min=2,max=50,alpha"`
+	DateOfBirth  string `json:"date_of_birth" binding:"required"`
+	Gender       string `json:"gender" binding:"required,oneof=male female other"`
+	MobileNumber string `json:"mobile_number" binding:"required,len=10,numeric"`
 }
